fix(styles/print): wrap codes in print mode

--- a/src/styles/print.scss
+++ b/src/styles/print.scss
@@ -6,4 +6,8 @@
   :root {
     --text-color: initial !important;
   }
+
+  code, pre {
+    @apply whitespace-pre-wrap;
+  }
 }
